--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="metxt">
 			<h1>MY NAME IS BRIANNE PARK</h1>
-			<h3>I am an electrical engineer, but I like design.</h3>
+			<h3>I am an electrical engineering major, but I like design.</h3>
 		</div>
 		<ul class="links">
 			<input class="linkfiller" type="image" src="filler.png" width="50%" height="20%" value="submit">
