--- a/work.html
+++ b/work.html
@@ -1,18 +1,37 @@
 <html>
 <head>
-<title> Brianne Park </title>
+<title> Projects </title>
 <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-
-		<div class="main">
-				<input class="background" type="image" src="main.png" width="100%" height="auto" value="submit">
-				<center>
-					<input class="logo" type="image" src="logo3.png" width="10%" height="auto" value="submit">
-					<input class="name" type="image" src="name.png" width="20%" height="auto" value="submit">
-				</center>
+	<header>
+		<div class="logotop">
+				<a href="index.html"><img src="logo3.png" width="auto" height="60%"></a>
 		</div>
+		<div class="main">
+			<center>
+				<input class="name" type="image" src="name.png" width="20%" height="auto" value="submit">
+			</center>
+		</div>
+	</header>
+
+	<div class="proj">
+		<div class="pics">
+			<a href="URL"><img src="sunsetrl.png" style="float:left; width:30.1%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="water.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<p style="clear:both;">
+		</div>
+	</div>
 
 </body>
 
