--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
 			<a href="URL"><img src="water.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
