--- a/work.html
+++ b/work.html
@@ -18,17 +18,17 @@
 
 	<div class="proj">
 		<div class="pics">
-			<a href="URL"><img src="sunsetrl.png" style="float:left; width:30.1%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:72%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="water.jpg" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="water.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="sunflowers.jpg" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
 			<p style="clear:both;">
 		</div>
 	</div>
