--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Projects </title>
+<title> Samples </title>
 <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -18,17 +18,12 @@
 
 	<div class="proj">
 		<div class="pics">
-			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:72%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="water.jpg" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunsetrl.png" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="cherryblossoms.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="sunflowers.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="tyler1.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="tyler2.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="tyler3.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="tyler4.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="yayoi.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img src="yayoi2.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
 			<p style="clear:both;">
 		</div>
 	</div>
