--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@
 		<div class="metxt">
 			<h1>MY NAME IS BRIANNE PARK</h1>
 			<h3>I am an electrical engineering major, but I like design.</h3>
+			<!--<div class="reslink"
+				<li><a href="resume.html">View my Resume &rarr;</a></li>
+			</div>-->
+			<div class="aboutmelink"
+				<li><a href="aboutme.html">Learn more about me &rarr;</a></li>
+			</div>
 		</div>
+		
 		<ul class="links">
 			<input class="linkfiller" type="image" src="filler.png" width="50%" height="20%" value="submit">
-			<li><a href="work.html">Projects</a></li>
+			<li><a href="work.html">Samples</a></li>
 		</ul>
 		<div class="myworkfiller">
 				<input class="filler" type="image" src="filler.png" width="50%" height="auto" value="submit">
 		</div>
 		
-		<input class="museum" type="image" src="museum.JPG" width="auto" height="88%" value="submit">
-		<input class="sunflowers" type="image" src="sunflowers.JPG" width="auto" height="88%" value="submit">
-		<!--<input class="sunflowerscopy" type="image" src="snflr.jpeg" width="auto" height="30%" value="submit">!-->
-		<!--<input class="cherreh" type="image" src="cherryblossoms.JPG" width="auto" height="88%" value="submit">!-->
+		<input class="museum" type="image" src="tyler2.png" width="auto" height="75%" value="submit">
+		<input class="sunflowers" type="image" src="tyler3.png" width="auto" height="75%" value="submit">
 		<input class="filler1" type="image" src="filler.png" width="50%" height="auto" value="submit">
 
 </body>
