--- a/aboutme.html
+++ b/aboutme.html
@@ -22,9 +22,8 @@
 			<img src="lanikai.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
 			<img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
 			<img src="mainpage.png" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
-			
 			<img src="view.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
-			<img src="meplant.JPG" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
+			<img src="meplant.jpg" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
 			<img src="sunsetrl.png" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
 			<p style="clear:both;">
 		</div>
