Becoming more responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> Brianne Park </title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="style.css" rel="stylesheet" type="text/css">
-
 </head>
-<body>
 
+<body>
 		<div class="main">
 				<input class="background" type="image" src="main.png" width="100%" height="auto" value="submit">
 				<center>
@@ -15,7 +17,7 @@
 		</div>
 		<div class="metxt">
 			<h1>MY NAME IS BRIANNE PARK</h1>
-			<h3>I am an electrical engineering major, but I like design.</h3>
+			<h3>I am an electrical engineering major that likes design.</h3>
 			<!--<div class="reslink"
 				<li><a href="resume.html">View my Resume &rarr;</a></li>
 			</div>-->
@@ -24,17 +26,15 @@
 			</div>
 		</div>
 		
-		<ul class="links">
-			<input class="linkfiller" type="image" src="filler.png" width="50%" height="20%" value="submit">
+		<ul class="samplelink">
 			<li><a href="work.html">Samples</a></li>
 		</ul>
 		<div class="myworkfiller">
-				<input class="filler" type="image" src="filler.png" width="50%" height="auto" value="submit">
+				<img class="filler" src="filler.png" style="width:50%; height:auto">
 		</div>
-		
-		<input class="museum" type="image" src="tyler2.png" width="auto" height="75%" value="submit">
-		<input class="sunflowers" type="image" src="tyler3.png" width="auto" height="75%" value="submit">
-		<input class="filler1" type="image" src="filler.png" width="50%" height="auto" value="submit">
+		<a href="work.html"><img class="sample1" src="tyler2.png" style="width:auto; height:75%"></a>
+		<a href="work.html"><img class="sample2" src="tyler3.png" style="width:auto; height:75%"></a>
+		<img class="filler1" src="filler.png" style="width:50%; height:auto">
 
 </body>
 
