--- a/aboutme.html
+++ b/aboutme.html
@@ -18,19 +18,19 @@
 
 	<div class="proj">
 		<div class="pics">
-			<img src="IMG_1933.JPG" style="float:left; width:auto; height:72%; margin-right:1%; margin-bottom:1%">
-			<img src="lanikai.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
-			<img src="museum.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
-			<img src="mainpage.png" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
-			<img src="view.JPG" style="float:left; width:auto; height:35%; margin-right:1%; margin-bottom:1%">
-			<img src="meplant.jpg" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
-			<img src="sunsetrl.png" style="float:left; width:auto; height:35.1%; margin-right:1%; margin-bottom:1%">
+			<img class="i1" src="IMG_1933.JPG">
+			<img class="i2" src="lanikai.JPG">
+			<img class="i3" src="museum.JPG">
+			<img class="i4" src="mainpage.png">
+			<img class="i5" src="view.JPG">
+			<img class="i6" src="meplant.JPG">
+			<img class="i7" src="sunsetrl.png">
 			<p style="clear:both;">
 		</div>
 	</div>
 	
 	<div class="abtmetext">
-		<h1> About Me </h1>
+		<h1> About Me. </h1>
 		<h2>
 			I am currently a student at Portland State University taking my last and final class to achieve a Bachelor's of Science
 			in Electrical Engineering. My focus is in the Radio-frequency and Analog track. <br>
