--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
 			<!--<div class="reslink"
 				<li><a href="resume.html">View my Resume &rarr;</a></li>
 			</div>-->
+		</div>
 			<div class="aboutmelink"
 				<li><a href="aboutme.html">Learn more about me &rarr;</a></li>
 			</div>
-		</div>
 		
-		<ul class="samplelink">
+		<div class="samplelink">
 			<li><a href="work.html">Samples</a></li>
-		</ul>
-		<div class="myworkfiller">
-				<img class="filler" src="filler.png" style="width:50%; height:auto">
 		</div>
-		<a href="work.html"><img class="sample1" src="tyler2.png" style="width:auto; height:75%"></a>
-		<a href="work.html"><img class="sample2" src="tyler3.png" style="width:auto; height:75%"></a>
-		<img class="filler1" src="filler.png" style="width:50%; height:auto">
+		<img class="filler" src="filler.png">
+		<img class="filler1" src="filler.png">
+		<img class="filler2" src="filler.png">
+		<img class="filler3" src="filler.png">
+		<img class="filler4" src="filler.png">
+		<img class="filler5" src="filler.png">
+		<a href="work.html"><img class="sample1" src="tyler2.png"></a>
+		<a href="work.html"><img class="sample2" src="tyler3.png"></a>
 
 </body>
 
