--- a/work.html
+++ b/work.html
@@ -18,12 +18,12 @@
 
 	<div class="proj">
 		<div class="pics">
-			<a href="URL"><img src="tyler1.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="tyler2.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="tyler3.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="tyler4.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="yayoi.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
-			<a href="URL"><img src="yayoi2.png" style="float:left; width:46%; height:auto; margin-right:1%; margin-bottom:1%"></a>
+			<a href="URL"><img class="t1" src="tyler1.png"></a>
+			<a href="URL"><img class="t2" src="tyler2.png"></a>
+			<a href="URL"><img class="t3" src="tyler3.png"></a>
+			<a href="URL"><img class="t4" src="tyler4.png"></a>
+			<a href="URL"><img class="y1" src="yayoi.png"></a>
+			<a href="URL"><img class="y2" src="yayoi2.png"></a>
 			<p style="clear:both;">
 		</div>
 	</div>
